<resources>
    <string name="app_name">eKnjiznica</string>
    <string name="warning_log_out_session_expired">Vaša sesija je istekla.</string>
    <string name="msg_unexpected_error">Došlo je do neočekivane greške</string>
    <string name="OK">OK</string>
    <string name="Cancel">Odustani</string>
    <string name="client_id">mobile</string>
    <string name="label_username">Korisničko ime</string>
    <string name="label_password">Lozinka</string>
    <string name="sign_in">Prijavi se</string>
    <string name="sign_up">Registracija</string>
    <string name="error_field_password_invalid">Minimalno 6 karaktera uključujući velika i mala slova, brojeve i specijalni karakter(!@#$%)</string>
    <string name="error_field_username_invalid">Unesite ispravno korisničko ime</string>
    <string name="error_fill_in_fields">Popunite obavezna polja.</string>
    <string name="please_wait">Molimo pričekajte.</string>
    <string name="title_activity_register">Registriraj se</string>
    <string name="label_phone_number_contact">Broj telefona</string>
    <string name="label_email">Email</string>
    <string name="error_field_phone_invalid">Upišite ispravan telefonski broj</string>
    <string name="error_field_email_invalid">Upišite ispravan email</string>
    <string name="label_first_name">Ime</string>
    <string name="label_last_name">Prezime</string>
    <string name="error_field_first_name_invalid">Unesite ispravno ime.</string>
    <string name="error_field_last_name_invalid">Unesite ispravno prezime</string>
    <string name="title_activity_home">Knjige</string>
    <string name="tab_text_recommended">Preporučeno</string>
    <string name="tab_text_categories">Kategorije</string>
    <string name="tab_text_favorites">Favoriti</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="nav_books">Knjige</string>
    <string name="my_books">Moje knjige</string>
    <string name="nav_my_basket">Moja košarica</string>
    <string name="nav_profile">Profil</string>
    <string name="nav_logout">Odjavi se</string>
    <string name="empty_placeholder">N/A</string>
    <string name="title_activity_profile">Moj profil</string>
    <string name="label_account_balance">Stanje računa</string>
    <string name="profile_update_success">Uspješno ste izmijenili Vaš profil.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_selling">Najprodavanije</string>
    <string name="top_readed">Najčitanije</string>
    <string name="no_recommended_books">Nema preporučenih knjiga.</string>
    <string name="no_top_selling_books">Nema najprodavanijih knjiga.</string>
    <string name="title_activity_book_details">Detalji knjige</string>
    <string name="book_price">Cijena: </string>
    <string name="book_description">Opis:</string>
    <string name="demo_description">Ratovi i raspad stare Jugoslavije označili su početak novog, burnog i strašnog vremena. Novi idoli mladih postali su ratni profiteri, a karijere folk pevačica primeri životnog uspeha. Kriminal je u Srbiji postao uvaženo zanimanje. Nisam nimalo ponosna na svoj život i ne predlažem nikome na ovom svetu da mu budem uzor. Ipak moram da kažem da nisam nezadovoljna. Za svojih četrdeset pet godina života pretrpela sam mnogo manju kaznu nego većina mojih vršnjaka koji su inženjeri, arhitekte, radnici…</string>
    <string name="undo">Poništi</string>
    <string name="book_favorite_added">%s je uspješno dodan u favorite</string>
    <string name="book_favorite_removed">%s je uspješno uklonjen iz favorita</string>
    <string name="menu_favorite">Favoriti</string>
    <string name="title_logout">Odjava</string>
    <string name="title_logout_message">Ova akcija odjavit će vas s trenutno aktivnog korisničkog računa.</string>
    <string name="title_activity_login">Logiraj se</string>
    <string name="no_favorite_books">Favoriti su prazni.</string>
    <string name="added_to_favorites">Dodano %s</string>
    <string name="buy_date">Kupljeno %s</string>
    <string name="book_added_to_basket">Knjiga je dodana u košaricu.</string>
    <string name="book_sent_to_email">Knjiga je poslana na email.</string>
    <string name="books_sent_to_email">Knjige su poslane na email.</string>
    <string name="error_sending_book">Greška prilikom slanja knjige.</string>
    <string name="sending_book_to_email">Šaljemo knjigu na emial..</string>
    <string name="buy">Kupi</string>
    <string name="title_shopping_cart_activity">Moja košarica</string>
    <string name="buying_book">Kupujem knjige…</string>
    <string name="total_price">Ukupno: %.2f KM</string>
    <string name="price">Cijena: %.2f KM</string>
    <string name="tax">Porez: %.2f KM</string>
    <string name="search_hint">Naziv knjige</string>
    <string name="book_name">Naziv knjige</string>
    <string name="title_my_books">Moje knjige</string>
</resources>
