<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ui.register.RegisterActivity"
    tools:showIn="@layout/activity_register">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:src="@drawable/book_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/iv_logo">

            <EditText
                android:id="@+id/ed_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_first_name"
                android:textColor="?android:textColorPrimary"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="?android:textColorSecondary"
                tools:text="@string/label_first_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_firstname">

            <EditText
                android:id="@+id/ed_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_last_name"
                android:textColor="?android:textColorPrimary"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="?android:textColorSecondary"
                tools:text="@string/label_last_name" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            android:layout_marginTop="16dp"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_lastname">

            <EditText
                android:id="@+id/ed_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_username"
                android:textColor="?android:textColorPrimary"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHint="?android:textColorSecondary"
                tools:text="@string/label_username" />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_username">

            <EditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_password"
                android:inputType="textPassword"
                android:imeOptions="actionNext"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_password">

            <EditText
                android:id="@+id/ed_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_email"
                android:inputType="textEmailAddress"
                android:imeOptions="actionNext"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="?colorAccent"
            app:hintAnimationEnabled="true"
            app:layout_constraintTop_toBottomOf="@id/til_email">

            <EditText
                android:id="@+id/ed_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/label_phone_number_contact"
                android:inputType="phone"
                android:imeOptions="actionDone"
                android:textColor="?android:textColorPrimary"
                android:textColorHint="?android:textColorSecondary"/>
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            android:background="?colorAccent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/til_phone_number"
            />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>