<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/parent"
    tools:context="ba.lukic.petar.eknjiznica.ui.profile.ProfileActivity">


    <android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/title_activity_profile" />


    </android.support.design.widget.AppBarLayout>


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_anchor="@+id/nestedScrollView"
        app:layout_anchorGravity="right|top"
        app:srcCompat="@drawable/ic_edit_black_24dp" />


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/ic_man" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_firstname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_first_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary"
                    tools:text="@string/label_first_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_last_name"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary"
                    tools:text="@string/label_last_name" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/label_username"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary"
                    tools:text="@string/label_username" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/label_phone_number_contact"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_account_balance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="?colorAccent"
                app:hintAnimationEnabled="true">

                <EditText
                    android:id="@+id/ed_account_balance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:hint="@string/label_account_balance"
                    android:imeOptions="actionDone"
                    android:inputType="phone"
                    android:textColor="?android:textColorPrimary"
                    android:textColorHint="?android:textColorSecondary"
                    tools:text="800.54KM" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>
