<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_height="match_parent"
    tools:context="ba.lukic.petar.eknjiznica.ui.book_details.BookDetailsActivity"
    tools:showIn="@layout/activity_book_details"
    xmlns:tools="http://schemas.android.com/tools">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:paddingStart="8dp"
    android:paddingEnd="8dp"
    android:layout_height="match_parent"
   >


    <ImageView
        android:id="@+id/book_image"
        android:layout_width="110dp"
        android:layout_height="150dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/book_temp" />


    <TextView
        android:id="@+id/tv_book_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_author"
        app:layout_constraintTop_toTopOf="@+id/book_image"
        tools:text="15KM" />

    <TextView
        android:id="@+id/tv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="?android:textColorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/tv_book_categories"
        app:layout_constraintTop_toBottomOf="@+id/tv_book_title"
        tools:text="Harry Potterrrrrrrrrrrrrr" />

    <TextView
        android:id="@+id/tv_book_categories"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ellipsize="end"
        android:singleLine="true"
        android:textColor="?android:textColorSecondary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/book_image"
        app:layout_constraintTop_toBottomOf="@+id/tv_author"
        tools:text="Roman" />

    <TextView
        android:id="@+id/tv_label_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/book_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/book_image" />

    <TextView
        android:id="@+id/tv_book_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/tv_label_price"
        app:layout_constraintTop_toBottomOf="@+id/book_image"
        tools:text="15 KM" />



    <TextView
        android:id="@+id/tv_label_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/book_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_price" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_label_description"
        tools:text="@string/demo_description" />
</android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
